<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@drawable/background1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:layout_below="@+id/appTitle"
        android:layout_marginTop="48dp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/usernameEditText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="21dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/recoverPasswordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recover_password_button"
        android:layout_alignTop="@id/passwordEditText"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@android:color/white"
        app:cornerRadius="0dp"
        android:textColor="@color/deep_blue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordEditText"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/login_button"
            android:textColor="@color/deep_blue"
        app:cornerRadius="0dp"
        android:layout_marginRight="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/white"
            android:text="@string/register_button"
            android:textColor="@color/deep_blue"
        app:cornerRadius="0dp"
        android:layout_marginLeft="8dp" />
    </LinearLayout>




</RelativeLayout>